<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:src="@drawable/empty_character" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/CharacterBasicStrings"
                android:text="@string/base_character_name" />

            <TextView
                android:id="@+id/status"
                style="@style/CharacterBasicStrings"
                android:text="@string/base_character_status" />

            <TextView
                android:id="@+id/species"
                style="@style/CharacterBasicStrings"
                android:text="@string/base_character_species" />

            <TextView
                android:id="@+id/gender"
                style="@style/CharacterBasicStrings"
                android:text="@string/base_character_gender" />

            <TextView
                android:id="@+id/type"
                style="@style/CharacterBasicStrings"
                android:text="@string/base_character_type" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CharacterBasicStrings"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/character_origin_label"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/origin"
            style="@style/CharacterBasicStrings"
            android:layout_width="wrap_content"
            android:text="@string/character_origin_unknown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CharacterBasicStrings"
            android:layout_width="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/character_location_label"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/location"
            style="@style/CharacterBasicStrings"
            android:layout_width="wrap_content"
            android:text="@string/character_location_unknown" />
    </LinearLayout>

    <TextView
        style="@style/CharacterBasicStrings"
        android:text="@string/character_episodes_label"
        android:textColor="@color/light_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/episodes_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>